[tool.poetry]
name = "GSTR-4"
version = "0.1.0"
description = "Program for generating data for GSTR-4"
authors = ["Shahprogrammer <shahprogrammer05@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
